--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,11 @@ jobs:
     name: Build x86 and arm Image
     runs-on: ubuntu-18.04
     steps:
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.16.7
+      id: go
     - uses: actions/checkout@v2
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
@@ -26,4 +31,8 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build & Push Docker image
-      run: docker buildx build -t ${{ secrets.DOCKERHUB_USERNAME }}/snapshot-controller:$VERSION -f cmd/snapshot-controller/Dockerfile --push --platform=linux/arm64,linux/amd64 .
+      run:
+        '''
+        make
+        docker buildx build -t ${{ secrets.DOCKERHUB_USERNAME }}/snapshot-controller:$VERSION -f cmd/snapshot-controller/Dockerfile --push --platform=linux/arm64,linux/amd64 .
+        '''
