--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,6 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build & Push Docker image
-      run:
-        '''
+      run: |
         make
         docker buildx build -t ${{ secrets.DOCKERHUB_USERNAME }}/snapshot-controller:$VERSION -f cmd/snapshot-controller/Dockerfile --push --platform=linux/arm64,linux/amd64 .
-        '''
