--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build & Push Docker image
       run: |
-        make build_platforms="linux arm64"
+        make BUILD_PLATFORMS="linux arm64"
         docker buildx build -t ${{ secrets.DOCKERHUB_USERNAME }}/snapshot-controller:$VERSION -f cmd/snapshot-controller/Dockerfile --push --platform=linux/arm64 .
-        make build_platforms="linux amd64"
+        make BUILD_PLATFORMS="linux amd64"
         docker buildx build -t ${{ secrets.DOCKERHUB_USERNAME }}/snapshot-controller:$VERSION -f cmd/snapshot-controller/Dockerfile --push --platform=linux/amd64 .
