--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,4 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build & Push Docker image
-      run: |
-        make BUILD_PLATFORMS="linux arm64"
-        docker buildx build -t ${{ secrets.DOCKERHUB_USERNAME }}/snapshot-controller:$VERSION -f cmd/snapshot-controller/Dockerfile --push --platform=linux/arm64 .
-        make BUILD_PLATFORMS="linux amd64"
-        docker buildx build -t ${{ secrets.DOCKERHUB_USERNAME }}/snapshot-controller:$VERSION -f cmd/snapshot-controller/Dockerfile --push --platform=linux/amd64 .
+      run: docker buildx build -t ${{ secrets.DOCKERHUB_USERNAME }}/snapshot-controller:$VERSION -f cmd/snapshot-controller/Dockerfile --push --platform=linux/amd64,linux/arm64 .
