配置多架构镜像流水线

--- a/cmd/snapshot-controller/Dockerfile
+++ b/cmd/snapshot-controller/Dockerfile
@@ -1,4 +1,4 @@
-FROM 1.16.15-alpine3.15 AS builder
+FROM golang:1.16.15-alpine3.15 AS builder
 RUN apk --no-cache add gcc git make bash
 RUN git config --global http.version HTTP/1.1
 ADD . snapshot-controller
