配置多架构镜像流水线

--- a/cmd/snapshot-controller/Dockerfile
+++ b/cmd/snapshot-controller/Dockerfile
@@ -1,9 +1,8 @@
 FROM golang:1.16.15-alpine3.15 AS builder
 RUN apk --no-cache add gcc git make bash
 RUN git config --global http.version HTTP/1.1
-ADD . snapshot-controller
-WORKDIR snapshot-controller
-RUN echo $PWD
+ADD . /go/src/github/snapshot-controller
+WORKDIR /go/src/github/snapshot-controller
 RUN make
 
 FROM gcr.io/distroless/static:latest
@@ -11,5 +10,5 @@ LABEL maintainers="Kubernetes Authors"
 LABEL description="Snapshot Controller"
 ARG binary=./bin/snapshot-controller
 
-COPY --from=builder ./snapshot-controller/bin/snapshot-controller  snapshot-controller
+COPY --from=builder /go/src/github/snapshot-controller/bin/snapshot-controller  snapshot-controller
 ENTRYPOINT ["/snapshot-controller"]
